# u2f-rs

./: Cargo.toml  README.md
.zed/: settings.json
example/src/: main.rs
src/: authorization.rs  crypto.rs  lib.rs  messages.rs  protocol.rs  register.rs  u2ferror.rs  util.rs
tests/data/: cert_not_p256.der  cert_p256.der  cert_with_cn.der  cert_without_cn.der  pubkey.der  valid_cert.der
