[package]
name = "u2f"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Flavio Oliveira <flavio@wisespace.io>", "Klimenty Titov <aclo.create@gmail.com>"]
description = "Rust FIDO U2F Library"
keywords = ["authentication", "encryption", "U2F", "2fa"]
categories = ["authentication"]
repository = "https://github.com/markcda/u2f-rs"
readme = "README.md"

[lib]
name = "u2f"
path = "src/lib.rs"

[features]
default = ["rand"]
rand = ["dep:rand"]

[dependencies]
base64 = "0.22"
byteorder = "1.3"
bytes = "0.4"
chrono = "0.4"
ring = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = "0.1"
untrusted = "0.7"
webpki = "0.22"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
rand = { optional = true, version = "0.9", features = ["std_rng"] }
